--- a/styleme.css
+++ b/styleme.css
@@ -4,7 +4,7 @@ body {
 ol{ list-style-type: decimal;}
 h{color: bisque;}
 .trait{
-    color: blue;
+    color: greenyellow;
     font-display: bold;
 }
 #sidenote{
